--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ header .banner {
 }
 
 #work-6 {
-    background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsvg0ijcIfqZh_dsAiLfyxmrOBrhEBenbCjg&s") no-repeat 100%;
+    background: url("my-store.jpg") no-repeat 100%;
     background-size: cover;
 }
 
