--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ header .banner {
 }
 
 #work-1 {
-    background: url("https://media.licdn.com/dms/image/v2/D4E2DAQFxEW4Aqu4-Vw/profile-treasury-image-shrink_1920_1920/profile-treasury-image-shrink_1920_1920/0/1725634898309?e=1727787600&v=beta&t=u3KxQ0wrkZJjTREswmoa0Br8WUA0mQ5T8x1Fd9x0nBI") no-repeat 100%;
+    background: url("eco.jpg") no-repeat 100%;
     background-size: cover;
     background-position: center center; 
 }
