--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ header .banner {
 }
 
 #work-6 {
-    background: url("eco.jpg") no-repeat 100%;
+    background: url("my-store.jpg") no-repeat 100%;
     background-size: cover;
 }
 
