--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ header .banner {
 }
 
 #work-5 {
-    background: url("https://media.licdn.com/dms/image/v2/D4E22AQEwjNLb7oBmRg/feedshare-shrink_2048_1536/feedshare-shrink_2048_1536/0/1727125579298?e=1730332800&v=beta&t=zweDjxatQLZCzz-jMSO3MaFEBnYS6hpugICEskxRo5k") no-repeat 100%;
+    background: url("apidragon.jpg") no-repeat 100%;
     background-size: cover;
     background-position: center center; 
 }
