--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ header .banner {
 }
 
 #work-5 {
-    background: url("apidragon.jpg") no-repeat 100%;
+    background: url("bookApi.jpg") no-repeat 100%;
     background-size: cover;
     background-position: center center; 
 }
